--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; This webpage has been created as a part of the <a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/"> AWS Cloud Resume Challenge</a>.</span>
+						<span class="copyright">&copy; This webpage has been created as a part of the 
+							<a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/"> AWS Cloud Resume Challenge</a>.</span>
 					</footer>
 
 			</div>
