--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						
 						<h1>Hello !!!</h1>
-
-						<!-- Paragraph where the number of visits will be displayed -->
+						<!-- Number of visits will be displayed below -->
 						<p>Number of visits: <span id="visitCount"></span></p> 
-
 					</header>
 
 				<!-- Footer -->
