--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Hello There Everyone !!!</h1>
+						<h1>Hello There !!!</h1>
 						<!-- Number of visits will be displayed below -->
 						<p>Number of visits: <span id="visitCount"></span></p> 
 					</header>
