--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<h1>Hello !!!</h1>
 						<!-- Number of visits will be displayed below -->
-						<p>Number of visits: <span id="visitCount"></span></p> 
+						<p>This site currently has <span id="visitCount"></span> views.</p> 
 					</header>
 
 				<!-- Footer -->
