--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
 
 			//API Gateway Invoke URL
-			const apiUrl = 'https://blpj3yb7kf.execute-api.us-east-1.amazonaws.com/prod/visit-count';
+			const apiUrl = 'https://y48pdb9oy3.execute-api.us-east-1.amazonaws.com/prod/visit-count';
 
 			// Fetch the visit count from the API
 			fetch(apiUrl)
